syntax = "proto3";

import "v1/misc/common.proto";
import "v1/nexus/nexus.proto";
import "v1/volume/volume.proto";
import "v1/pool/pool.proto";
import "v1/replica/replica.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package v1.registry;

message Specs {
  repeated volume.VolumeDefinition volumes = 1;
  repeated pool.PoolDefinition pools = 2;
  repeated nexus.NexusSpec nexuses = 3;
  repeated replica.ReplicaSpec replicas = 4;
  repeated volume.AffinityGroupSpec affinity_groups = 5;
}

message States {
  repeated pool.PoolState pools = 1;
  repeated nexus.Nexus nexuses = 2;
  repeated replica.Replica replicas = 3;
}

message GetSpecsRequest {}

message GetStatesRequest {}

message GetSpecsReply {
  oneof reply {
    Specs specs = 1;
    common.ReplyError error = 2;
  }
}

message GetStatesReply {
  oneof reply {
    States states = 1;
    common.ReplyError error = 2;
  }
}

service RegistryGrpc {
  rpc GetSpecs (GetSpecsRequest) returns (GetSpecsReply) {}
  rpc GetStates (GetStatesRequest) returns (GetStatesReply) {}
}
